--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "^6.19.2",
     "axios": "^1.13.4",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "prisma": "^6.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
-    "prisma": "^7.3.0"
+    "nodemon": "^3.1.11"
   }
 }
